--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
   width: min-content;
 }
 
+.innerContainer {
+  display: flex;
+}
+
 .game__Scoreboard {
   display: grid;
   grid-template-columns: 100%;
